tests/parse_print/random_perturb/enum_liberated/delete-03/stderr.expected
Error:
    Parser error in file: tests/parse_print/random_perturb/enum_liberated/delete-03/delete-03.essence Error is:
ValidatorError tests/parse_print/random_perturb/enum_liberated/delete-03/delete-03.essence:6:42:
  |
6 | letting E2 be new type enum {a, b, c, d, "hoh hoh hooo}
  |                                          ^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/random_perturb/enum_liberated/delete-03/delete-03.essence:6:42:
  |
6 | letting E2 be new type enum {a, b, c, d, "hoh hoh hooo}
  |                                          ^
Missing }
